@startuml
'https://plantuml.com/class-diagram


Main <-- MediaMenu
class Main{
public static void main();
Scanner;
File f = new File();
createUser();
boolean login();
}
Main <-- FileIO
MediaMenu <-- Media
Main <-- User
Main <-- DBConnector

Interface Media{
String getName();
int getYear();
double getRating();
String getCategorise();


}

class Film implements Media{
ArrayList<String> categories;
String name;
int year;
}

class MediaMenu{
ArrayList<Media> media;
searchByName();
searchByCategorise();

}

class User{
ArrayList<Media> savedMedia;
ArrayList<Media> seenMedia;
String userName;
}



@enduml